[build-system]
requires = ["setuptools>=63.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olivos"
version = "0.11.83"
description = "OlivOS / Witness Union，一个强大的跨平台交互栈与机器人框架"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "OlivOS-Team", email = "benzenpenxil@foxmail.com"}
]
license = {text = "AGPLv3 License"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Python 3.10+ 通用依赖
dependencies = [
    "Flask",
    "Werkzeug==2.2.2",
    "gevent",
    "Pillow==9.3.0",
    "psutil",
    "pystray",
    "requests",
    "requests-toolbelt",
    "rsa",
    "websocket-client",
    "websockets",
    "aiohttp",
    "qrcode",
    "brotli",
    "pyjson5",
    "pywebview>=4.0.2",
    "filetype",
    "grpcio",
    "grpcio-tools",
    "protobuf",
]

# 可选依赖组
[project.optional-dependencies]
# Python 3.7 通用依赖
py37 = [
    "Flask==2.0.2",
    "gevent==21.12.0",
    "psutil==5.9.0",
    "pystray==0.19.4",
    "requests==2.28.1",
    "requests-toolbelt==0.9.1",
    "rsa==4.9",
    "websocket-client==1.4.2",
    "websockets==10.1",
    "aiohttp==3.7.4",
    "qrcode==7.3.1",
    "grpcio==1.51.3",
    "grpcio-tools==1.51.3",
    "protobuf==4.24.4",
]

# Windows特定依赖
win = [
    "pypiwin32",
]

# 打包工具
build = [
    "pyinstaller==5.6.2; python_version == '3.7'",
    "pyinstaller==6.9.0; python_version >= '3.10'",
    "nuitka",
    "setuptools>=63.2.0",
]

# pyinstaller打包工具
pyinstaller = [
    "pyinstaller==5.6.2; python_version == '3.7'",
    "pyinstaller==6.9.0; python_version >= '3.10'",
    "setuptools>=63.2.0",
]

# nuitka打包工具
nuitka = [
    "nuitka",
    "setuptools>=63.2.0",
]

# 插件生态所需依赖
extend = [
    "lxml",
    "pyyaml",
    "openpyxl",
    "APScheduler==3.10.1",
    "js2py",
    "certifi",
    "httpx",
    "prompt-toolkit",
    "regex",
    "rich",
]

# 开发工具
dev = [
    "pytest",
    "black",
    "flake8",
    "ruff"
]

[project.urls]
Homepage = "https://doc.olivos.wiki/"
Repository = "https://github.com/OlivOS-Team/OlivOS"
Issues = "https://github.com/OlivOS-Team/OlivOS/issues"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py311"]
extend-exclude = '''
.\\OlivOS\\thirdPartyModule
'''

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
exclude = [
    "OlivOS/thirdPartyModule/*",
    "build/*"
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP"
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"OlivOS/hook*.py" = ["F401"]
"OlivOS/core/inlineData/*" = ["E501"]

[tool.ruff.format]
preview = true
quote-style = "single"
docstring-code-format = true
indent-style = "space"
skip-magic-trailing-comma = false
